# mc

./: .bandit  .env.example  .gitignore  CLAUDE.md  INSTALL.md  README.md  docker-compose.test.yml  install.sh  mc  pyproject.toml  setup.py
.claude/: settings.json
.claude-skills/: README.md  bug-to-test.md
.claude/agents/: gsd-executor.md
.claude/commands/: fix-integration-tests.md
.claude/commands/gsd/: complete-milestone.md  execute-phase.md  help.md  new-milestone.md  new-project.md  progress.md  quick.md  research-phase.md
.claude/commands/tdd-issue/: skill.md
.claude/get-shit-done/: CHANGELOG.md
.claude/get-shit-done/templates/: config.json
.claude/get-shit-done/workflows/: execute-phase.md  execute-plan.md  map-codebase.md  verify-work.md
.fix-integration-tests/: REPORT.md  SHELL_FIX_REPORT.md
.planning/: GSD_QUICK_START.md  INTEGRATION_TEST_FIX_REPORT.md  MILESTONES.md  PHASE_PROPOSAL_WINDOW_TRACKING.md  PLATFORM-PATHS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  UAT-TEST-PLAN.md  UAT-TESTS-BATCH-ABCE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: container-build-registry-rate-limit.md
.planning/debug/resolved/: build-script-false-image-changes.md  registry-auth-script-failure.md  test-tag-cleanup-removes-all-tags.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.0.2-MILESTONE-AUDIT.md  v2.0.2-REQUIREMENTS.md  v2.0.2-ROADMAP.md  v2.0.3-MILESTONE-AUDIT.md  v2.0.3-REQUIREMENTS.md  v2.0.3-ROADMAP.md  v2.0.4-MILESTONE-AUDIT.md  v2.0.4-REQUIREMENTS.md  v2.0.4-ROADMAP.md  v2.0.5-MILESTONE-AUDIT.md  v2.0.5-REQUIREMENTS.md  v2.0.5-ROADMAP.md
.planning/phases/01-test-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-critical-path-testing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-code-cleanup/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-security-hardening/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md  bandit-report.html
.planning/phases/05-error-handling---robustness/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-infrastructure-observability/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-performance-optimization/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-type-safety-&-modernization/: 08-01-PLAN.md  08-01-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-container-architecture---podman-integration/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-salesforce-integration-&-case-resolution/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-container-lifecycle-a-state-management/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-05-PLAN.md  11-05-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-terminal-attachment---exec/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  ARCHITECTURE_AUTO_UPDATE.md  FEATURES.md  FEATURES_AUTO_UPDATE.md  FEATURES_CONTAINER_BUILDS.md  PITFALLS.md  PITFALLS_WINDOW_TRACKING.md  STACK.md  STACK_AUTO_UPDATE.md  STACK_MULTI_STAGE_BUILDS.md  SUMMARY.md
config-examples/: case.yaml.example  compact.yaml.example  customer.yaml.example  mounts.yaml.example
container/: Containerfile  README.md  build-container.sh  build.sh  entrypoint.sh  run.sh  test-integration  verify-cache.sh  versions.yaml
docs/: INTEGRATION_TEST_BEST_PRACTICES.md  INTEGRATION_TEST_NO_MOCKING.md  RESTRUCTURE_SUMMARY.md  USING_BUG_TO_TEST.md
docs/skills/: fix-integration-tests.md  tdd-issue.md
scripts/: fix_integration_tests.py
src/mc/: __init__.py  banner.py  exceptions.py  runtime.py  update.py  version.py  version_check.py
tests/: conftest.py  run_all_tests.sh  test_cache_manager.py  test_case_comments.sh  test_case_resolver.py  test_check.sh  test_create.sh  test_go.sh  test_ls.sh  test_version_check.py
tests/integration/: REGRESSION_TESTS.md  conftest.py  test_backwards_compatibility.py  test_case_terminal.py  test_config_migration.py  test_container_create_integration.py  test_container_image.py  test_entry_points.py  test_go_command.py  test_ldap_docker.py  test_version_check.py  test_window_tracking.py
tests/unit/: conftest.py  test_auth.py  test_banner.py  test_cache.py  test_cli_container_commands.py  test_config.py  test_container_manager_create.py  test_container_manager_exec.py  test_container_manager_lifecycle.py  test_container_manager_list.py  test_container_state.py  test_downloads.py  test_file_ops.py  test_formatters.py  test_go_command_other.py  test_ldap.py  test_main.py  test_placeholder.py  test_platform_detect.py  test_podman_client.py  test_redhat_api.py  test_runtime.py  test_salesforce_api.py  test_terminal_attach.py  test_terminal_launcher.py  test_terminal_macos_api.py  test_terminal_shell.py  test_update.py  test_validation.py  test_version.py  test_window_registry.py  test_workspace.py
(+212 files in other folders)
