[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mc"
version = "2.0.4"
description = "MC CLI - Multi-case Container Management Tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "David Squirrell"}
]
keywords = ["cli", "case-management", "containers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "backoff>=2.2.1",
    "packaging>=26.0",
    "platformdirs>=4.0.0",
    "podman>=5.7.0",
    "requests>=2.31.0",
    "rich>=14.0.0",
    "simple-salesforce>=1.12.9",
    "tenacity>=8.3.0",
    "tomli-w>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=9.0.0",
    "pytest-console-scripts>=1.4.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "responses>=0.25.0",
    "types-requests>=2.32.0",
]
macos = [
    "iterm2>=2.14; sys_platform == 'darwin'",
]

[project.scripts]
mc = "mc.cli.main:main"
mc-update = "mc.update:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=mc",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "backwards_compatibility: marks tests as backwards compatibility tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "platformdirs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "simple_salesforce.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "iterm2.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["/tests/", "/docs/", "/.planning/"]
skips = []
